--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 book: 
   page-navigation: true
-  title: "NOAA quarto book" 
+  title: "O You Who" 
   site-url: "https://aryr100.github.io/NOAA-quarto-book/"
   repo-url: "https://github.com/aryr100/NOAA-quarto-book"
   repo-actions: [edit, source, issue]
@@ -13,7 +13,7 @@ book:
   author:
     - name: Jane Doe
       affiliations:
-        - name: NOAA Fisheres
+        - name: Islamic Open Works
           department: Northwest Fisheries Science Center
     - name: Eva Nováková
       institute: test
