--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ book:
   title: "O You Who" 
   site-url: "https://aryr100.github.io/NOAA-quarto-book/"
   repo-url: "https://github.com/aryr100/NOAA-quarto-book"
-  repo-actions: [edit, source, issue]
+  repo-actions: [source, issue]
   favicon: assets/favicon.ico
   downloads: [pdf, docx]
   search: true
@@ -15,17 +15,7 @@ book:
       affiliations:
         - name: Islamic Open Works
           department: Northwest Fisheries Science Center
-    - name: Eva Nováková
-      institute: test
-      affiliations:
-        - name: NOAA Fisheries
-          department: West Coast Regional Office
-          institute: test
-    - name: Matti Meikäläinen
-      affiliations:
-        - name: NOAA Fisheries
-          department: Southwest Fisheries Science Center
-  chapters:
+    chapters:
     - index.qmd
     - content/setup.qmd
     - content/add-content.qmd
